test/files/pos/t1230/J.java
class J { public int foo ; }
