test/files/neg/t3663/PackageProtected.java
package test;

class PackageProtected {
    int foo;
}
